committing new updates and resume

--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
                   <div class="item-img">
                       <img src="assets/project5.jpeg" alt="Project 1" class="project-image">
                       <div class="project-details">
-                          <a href="https://github.com/amink21/MTLHalalFood" class="view-project">MTLHalalFood</a>
-                      </div>
+                          <a href="https://github.com/amink21/MTLHalalFood" class="view-project" target="_blank" rel="noopener noreferrer">MTLHalalFood</a>
+                          <a href="https://mtlhalalfood.com/" class="view-project" target="_blank" rel="noopener noreferrer">Live Demo</a>
+                        </div>
                   </div>
               </div>  
 
@@ -116,7 +117,7 @@
                   <div class="item-img">
                       <img src="assets/project1.jpg" alt="Project 1" class="project-image">
                       <div class="project-details">
-                          <a href="project-detail-page.html" class="view-project">Minecraft C++</a>
+                          <a href="https://github.com/stunt296/comp371" class="view-project" target="_blank" rel="noopener noreferrer">Minecraft C++</a>
                       </div>
                   </div>
               </div>   
@@ -125,7 +126,8 @@
                   <div class="item-img">
                       <img src="assets/project2.jpg" alt="Project 1" class="project-image">
                       <div class="project-details">
-                          <a href="project-detail-page.html" class="view-project">Personal Portfolio</a>
+                          <a href="https://github.com/amink21/Portfolio" class="view-project" target="_blank" rel="noopener noreferrer">Personal Portfolio</a>
+                          <a href="https://portfolio-amink21.vercel.app/" class="view-project" target="_blank" rel="noopener noreferrer">Live Demo</a>
                       </div>
                   </div>
               </div>                
@@ -134,7 +136,7 @@
                   <div class="item-img">
                       <img src="assets/project6.jpg" alt="Project 1" class="project-image">
                       <div class="project-details">
-                          <a href="project-detail-page.html" class="view-project">ProteinPros Static Website</a>
+                          <a href="https://github.com/amink21/Protein_eCommerce_Website" class="view-project" target="_blank" rel="noopener noreferrer">ProteinPros Static Website</a>
                       </div>
                   </div>
               </div>   
@@ -143,7 +145,7 @@
                   <div class="item-img">
                       <img src="assets/project3.jpg" alt="Project 1" class="project-image">
                       <div class="project-details">
-                          <a href="project-detail-page.html" class="view-project">TicTacToe Java</a>
+                          <a href="https://github.com/amink21/Tic-Tac-Toe" class="view-project" target="_blank" rel="noopener noreferrer">TicTacToe Java</a>
                       </div>
                   </div>
               </div>
@@ -153,7 +155,9 @@
                 <div class="item-img">
                     <img src="assets/project4.jpg" alt="Project6" class="project-image">
                     <div class="project-details">
-                        <a href="project-detail-page.html" class="view-project">Recipe Generator</a>
+                        <a href="https://github.com/amink21/Recipe_Generator" class="view-project" target="_blank" rel="noopener noreferrer">Recipe Generator</a>
+                        <a href="https://recipe-generator-lake.vercel.app/" class="view-project" target="_blank" rel="noopener noreferrer">Live Demo</a>
+
                     </div>
                 </div>
             </div>
@@ -162,7 +166,7 @@
               <div class="item-img">
                   <img src="assets/project7.jpg" alt="Project 1" class="project-image">
                   <div class="project-details">
-                      <a href="project-detail-page.html" class="view-project">Calorie Counter</a>
+                      <a href="https://github.com/amink21/Calorie_Counter" class="view-project" target="_blank" rel="noopener noreferrer">Calorie Counter</a>
                   </div>
               </div>
           </div>
@@ -178,13 +182,13 @@
           <h2 class="contact__heading">Looking for talent?</h2>
           <a href="mailto:aminkadawala@gmail.com?subject=Inquiry%20About%20Services&body=Hello%20Amin,%0D%0A%0D%0AI%20am%20interested%20in%20learning%20more%20about%20your%20services.%0D%0A%0D%0AThank%20you." class="contact__email">aminkadawala@gmail.com</a>
           <div class="contact__socials">
-            <a href="https://www.linkedin.com/in/amin-kadawala/" class="contact__button">
+            <a href="https://www.linkedin.com/in/amin-kadawala/" class="contact__button" target="_blank" rel="noopener noreferrer">
               <i class="bi bi-linkedin"></i> LinkedIn
             </a>
-            <a href="https://github.com/amink21" class="contact__button">
+            <a href="https://github.com/amink21" class="contact__button" target="_blank" rel="noopener noreferrer">
               <i class="bi bi-github"></i> GitHub
             </a>
-            <a href="Amin-Kadawala_Resume.pdf" class="contact__button">
+            <a href="assets/Amin-Kadawala_Resume.pdf" class="contact__button" target="_blank" rel="noopener noreferrer">
               <i class="bi bi-file-earmark-arrow-down"></i> Download CV
             </a>
             
