--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Amin Kadawala</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
-
+    <link rel="icon" type="image/png" href="favicon.png.jpg">
   </head>
   <body>
 
